<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/app_bar_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/app_bar_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/cart"
        app:actionLayout="@layout/custom_menu_item"
        app:showAsAction="always"/>
    <item
        android:id="@+id/app_view_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_view_module_24"
        android:title="@string/view"
        app:showAsAction="always"/>
    <item
        android:id="@+id/app_bar_logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/logout" />
</menu>