<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:theme="@style/Base.Theme.Textil2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/itemTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:padding="8dp"
            android:text="@string/item_name"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/itemInfo"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:padding="8dp"
            android:text="@string/item_info" />

        <TextView
            android:id="@+id/price"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemInfo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/to_cart" />

            <Button
                android:id="@+id/delete"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/baseline_delete_outline_24"
                android:contentDescription="törlés"
                android:width="48dp"
                 />

        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>