<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.Textil2"
    tools:context=".Register">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="416dp"
        android:layout_height="80dp"
        android:layout_marginEnd="70dp"
        app:cardBackgroundColor="@color/darkGreen"
        app:cardCornerRadius="60dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="50sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="#C8DEF6"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.060000002">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:gravity="center|start"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="30dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="#C8DEF6"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_2"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:gravity="center|start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="30dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_3"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:onClick="signup"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintVertical_bias="0.81" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />


</androidx.constraintlayout.widget.ConstraintLayout>